[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airdna-api"
version = "0.0.1"
authors = [
  { name="GuestReady" },
]
description = "AirDNA API"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/guestready/airdna-api"
Issues = "https://github.com/guestready/airdna-api/issues"
